feat: hero-section complete except stat-box.
Hero section is looking responsive and is almost completed save for the stat-box found at the bottom.

Added new typography to style the various components.

The button is styled primary and big by default.

Fixed a small sizing issue inside the nav-bar.

--- a/src/scss/components/_nav-bar.scss
+++ b/src/scss/components/_nav-bar.scss
@@ -13,7 +13,7 @@
 
 
     &__logo{
-        width: 16rem;
+        width: 14em;
         @include for-tablet-port-up{
             width: 22rem;
         }
