--- a/src/scss/components/_btn.scss
+++ b/src/scss/components/_btn.scss
@@ -7,6 +7,15 @@
         display: inline-block;
         text-decoration: none;
         border-radius: 20rem;
+        
+        font-size: 1.6rem;
+        padding: 2rem 5rem;
+        @include for-tablet-port-up{
+            font-size: 1.8rem;
+        }
+
+        color: $color-light;
+        background-color: $color-primary-1;
     }
 
     &:hover{
@@ -18,8 +27,13 @@
     }
 
     &--secondary{
-        color: $color-primary-1;
-        border: 1px solid $color-primary-1;
+        &:link,
+        &:visited{
+            background-color: #fff;
+            color: $color-primary-1;
+            border: 1px solid $color-primary-1;
+        }
+        
 
         &:hover{
             color: $color-primary-2;
@@ -33,11 +47,14 @@
     }
 
     &--small{
-        font-size: 1.2rem;
-        padding: 1rem 2rem;
-        @include for-tablet-port-up{
-            font-size: 1.6rem;
-            padding: 1.3rem 4rem;
+        &:link,
+        &:visited{
+            font-size: 1.2rem;
+            padding: .8rem 2.2rem;
+            @include for-tablet-port-up{
+                font-size: 1.6rem;
+                padding: 1.3rem 4rem;
+            }
         }
     }
 }
