feat: add new section which is also component "exposition-section"

--- a/src/scss/page/_index.scss
+++ b/src/scss/page/_index.scss
@@ -48,3 +48,10 @@
         }
     }
 }
+
+.exposition-section{
+    margin-top: 5rem;
+    @include for-tablet-port-up{
+        margin-top: 10rem;
+    }
+}
