--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,3 +8,4 @@
 @import './components/btn';
 @import './components/nav-bar';
 @import './components/stats-box';
+@import './components/exposition-section';
