--- a/src/scss/components/_exposition-section.scss
+++ b/src/scss/components/_exposition-section.scss
@@ -7,6 +7,9 @@
 
     &__card-wrapper{
         background-color: $color-light;
+        &--no-bg{
+            background-color: transparent;
+        }
     }
 
     &__card{
@@ -14,14 +17,21 @@
         flex-direction: column;
         
         @include for-desktop-up{
-            width: 85%;
+            width: 80%;
             margin: 0 auto;
 
             flex-direction: row;
             align-items: center;
+
+            column-gap: 10%;
         }
 
         padding: 8rem 3rem;
+        &--no-y-padding-tablet{
+            @include for-tablet-port-up{
+                padding: 0 3rem;
+            } 
+        }
         @include for-desktop-up{
             padding: 0;
         }
@@ -33,10 +43,15 @@
         order: 2;
 
         @include for-desktop-up{
+            text-align: left;
+
             order: 1;
-            flex: 0 0 50%;
+            flex: 1 1 50%;
             margin-top: 0rem;
         }
+    }
+    &__card--order-no-change &__text-box{
+        order: 2;
     }
 
     &__heading-primary{
@@ -46,9 +61,9 @@
     &__body-text{
         max-width: 60ch;
         margin: 0 auto;
-        
+
         @include for-desktop-up{
-            text-align: left;
+            margin: 0;
         }
     }
 
@@ -56,12 +71,12 @@
         order: 1;
         @include for-desktop-up{
             order: 2;
-            flex: 0 0 50%;
+            flex: 1 1 50%;
         }
 
         width: 100%;
         @include for-tablet-port-up{
-            width: 75%;
+            width: 60%;
             margin: 0 auto;
         }
         @include for-desktop-up{
@@ -70,5 +85,8 @@
 
         object-fit: contain;
         mix-blend-mode: multiply;
+    }
+    &__card--order-no-change &__image-main{
+        order: 1;
     }
 }
