--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,3 +9,4 @@
 @import './components/nav-bar';
 @import './components/stats-box';
 @import './components/exposition-section';
+@import './components/footer';
