fix: removed input outline

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -64,6 +64,10 @@
         max-width: 60rem;
         width: 100%;
 
+        &:focus{
+            outline: 0px;
+        }
+        
         @include for-desktop-up{
             width: 400px;
         }
